# internal/user/port/http/routes.go
@@ -17,19 +17,41 @@ func Routes(r *gin.RouterGroup, sqlDB dbs.IDatabase, validator validation.Valida
 
 	authMiddleware := middleware.JWTAuth()
 	refreshAuthMiddleware := middleware.JWTRefresh()
+
+	// GetMe RefreshToken  --  VerfiyCodeEmail  VerfiyCodePhoneNumber  VerfiyCodePhoneNumberResend VerfiyCodeEmailResend
 	authRoute := r.Group("/auth")
 	{
-		authRoute.POST("/login", userHandler.Login)
-		authRoute.POST("/register", userHandler.Register)
 		authRoute.GET("/me", authMiddleware, userHandler.GetMe)
 		authRoute.POST("/refresh-token", refreshAuthMiddleware, userHandler.RefreshToken)
-		authRoute.PUT("/update-user", authMiddleware, userHandler.UpdateUser)
+		//for doctor or Patient only
 		authRoute.PUT("/verfiy-code-email", authMiddleware, userHandler.VerfiyCodeEmail)
 		authRoute.PUT("/verfiy-code-phone-number", authMiddleware, userHandler.VerfiyCodePhoneNumber)
 		authRoute.PUT("/resend-verfiy-code-phone-number", authMiddleware, userHandler.VerfiyCodePhoneNumberResend)
 		authRoute.PUT("/resend-verfiy-code-email", authMiddleware, userHandler.VerfiyCodeEmailResend)
-		authRoute.GET("/users", authMiddleware, userHandler.ListUsers)
-		authRoute.DELETE("/", authMiddleware, userHandler.DeleteUser)
+	}
 
+	// ListUsers DeleteAdmin CreateAdmin UpdateAdmin LoginAdmin
+	authRouteAdmin := r.Group("/auth-admin")
+	{
+		authRouteAdmin.POST("/login", userHandler.LoginAdmin)
+		authRouteAdmin.POST("/create", authMiddleware, userHandler.CreateAdmin)
+		authRouteAdmin.PUT("/update", authMiddleware, userHandler.UpdateAdmin)
+		authRouteAdmin.GET("/users", authMiddleware, userHandler.ListUsers)
+		authRouteAdmin.DELETE("/", authMiddleware, userHandler.DeleteAdmin)
+	}
+
+	// LoginDoctor RegisterDoctor UpdateDoctor
+	authRouteDoctor := r.Group("/auth-doctor")
+	{
+		authRouteDoctor.POST("/login", userHandler.LoginDoctor)
+		authRouteDoctor.POST("/register", userHandler.RegisterDoctor)
+		authRouteDoctor.PUT("/update-user", authMiddleware, userHandler.UpdateDoctor)
+	}
+	// LoginPatient RegisterPatient UpdatePatient
+	authRoutePatient := r.Group("/auth-patient")
+	{
+		authRoutePatient.POST("/login", userHandler.LoginPatient)
+		authRoutePatient.POST("/register", userHandler.RegisterPatient)
+		authRoutePatient.PUT("/update-user", authMiddleware, userHandler.UpdatePatient)
 	}
 }
